--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
-html{
-    font-size: 10px;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#main{
-margin: 30px 8px;
+html {
+  font-size: 10px;
+}
+
+#main {
+  margin: 30px 8px;
   padding: 15px;
   border-radius: 5px;
   background: #eee;
+}
+
+#heading {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+#heading h1 {
+  font-size: 3rem;
+
+}
+
+#heading h6 {
+  font-size: 1.5rem;
 }
